# SoundsView

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  circularbutton.cpp  circularbutton.h  circulartrianglebutton.cpp  circulartrianglebutton.h  cirlebutoneditconvert.cpp  cirlebutoneditconvert.h  datacontroller.cpp  datacontroller.h  datamodel.cpp  datamodel.h  dataview.cpp  dataview.h  iconmanager.cpp  iconmanager.h  main.cpp  polygonbutton.cpp  polygonbutton.h  structdata.cpp  structdata.h  utils.cpp  utils.h  voiceroulette.cpp  voiceroulette.h
build_terminal/: CMakeCache.txt  SoundsView  cmake_install.cmake
build_terminal/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_terminal/QHotkeys/: cmake_install.cmake
build_terminal/QHotkeys/QHotkeys_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_terminal/QHotkeys/QHotkeys_autogen/UVLADIE3JM/: moc_qhotkey.cpp.d
build_terminal/QtAwesome/: QtAwesomeConfig.cmake  cmake_install.cmake
build_terminal/QtAwesome/QtAwesome_autogen/: deps
build_terminal/QtAwesome/QtAwesome_autogen/3QVQ3WXC3W/: moc_QtAwesome.cpp.d  moc_QtAwesomeAnim.cpp.d
build_terminal/SoundsView_autogen/: deps  mocs_compilation.cpp
build_terminal/SoundsView_autogen/EWIEGA46WW/: moc_circularbutton.cpp.d  moc_circulartrianglebutton.cpp.d  moc_cirlebutoneditconvert.cpp.d  moc_datacontroller.cpp.d  moc_datamodel.cpp.d  moc_dataview.cpp.d  moc_iconmanager.cpp.d  moc_mainwindow.cpp.d  moc_polygonbutton.cpp.d  moc_voiceroulette.cpp.d
build_terminal/SoundsView_autogen/include/: main.moc.d
src/: main.cpp
src/common/: iconmanager.h  utils.cpp  utils.h
src/core/: audiomanager.cpp  audiomanager.h  soundmanager.cpp  soundmanager.h
src/ui/: circularbutton.cpp  circularbutton.h  circulartrianglebutton.cpp  circulartrianglebutton.h  cirlebutoneditconvert.cpp  cirlebutoneditconvert.h  polygonbutton.cpp  polygonbutton.h  voiceroulette.cpp  voiceroulette.h
